# Matrix-Cuda

./: Makefile  meson.build
Code/: kernel.cu  kernel.h  kernel_call.cu  kernel_call.h  main.cu  matrix.cu  matrix.h
